--- a/src/components/banner.css
+++ b/src/components/banner.css
@@ -51,7 +51,7 @@
 /* Laptop screens */
 @media screen and (min-width: 769px) and (max-width: 1024px) {
   .banner-container {
-    width: 100vw;        
+    width: 100vw ;        
     height: 90vh;       /* proportional height */
     margin: 0;
     padding: 0;
@@ -75,9 +75,23 @@
 }
 
 /* Mobile screens */
+/* Mobile screens */
 @media screen and (max-width: 480px) {
+  html, body {
+    width: 100%;
+    overflow-x: hidden;
+  }
+
   .banner-container {
-    width: 100%;  
+    width: 100%;
+    max-width: 100%;
     height: 50vh;
+    overflow: hidden;
+  }
+
+  .banner-container img.banner-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 }
