--- a/src/components/banner.css
+++ b/src/components/banner.css
@@ -84,6 +84,7 @@
 /* Banner Text */
 
  .banner-text {
+  padding-top: 5px !important;
   position: absolute;
   top: 50%;                
   left: 50%;               
@@ -138,10 +139,10 @@
 /* Laptop screens */
 @media screen and (min-width: 769px) and (max-width: 1024px) {
   .banner-headline {
-    font-size: 2rem;
+    font-size: 1.8rem;
   }
   .banner-subtext {
-    font-size: 1.1rem;
+    font-size: 1rem;
   }
   .banner-cta {
     font-size: 0.9rem;
@@ -157,13 +158,13 @@
   }
 
   .banner-headline {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
   }
   .banner-subtext {
-    font-size: 1rem;
+    font-size: 0.9rem;
   }
   .banner-cta {
-    font-size: 0.85rem;
+    font-size: 0.80rem;
     padding: 7px 18px;
   }
 }
@@ -176,15 +177,15 @@
   }
 
   .banner-headline {
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     line-height: 1.2;
   }
   .banner-subtext {
-    font-size: 0.95rem;
+    font-size: 0.90rem;
     line-height: 1.3;
   }
   .banner-cta {
-    font-size: 0.8rem;
+    font-size: 0.7rem;
     padding: 6px 15px;
   }
 }
